--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>prueba profe</title>
 </head>
 <body>
+ 
     <h1>prueba</h1>
+    <h1>MORIREMOOOOOOOS</h1>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ducimus minus! Laudantium eligendi nisi eos alias dolores? Excepturi consequatur libero exercitationem nisi asperiores explicabo consectetur, deleniti porro, quae, ea amet!
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam ducimus rerum perferendis. Non, quia quisquam. Nesciunt, veritatis provident? Sit tempora aperiam molestias fuga libero ut dolorem saepe optio natus?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod aspernatur temporibus atque laboriosam dicta natus, minima quos qui quae.</p>
 </body>
 </html>
